--- a/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/detail.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/detail.html
@@ -37,8 +37,8 @@
                 <div class="menu">
                     <div class="menu-left">
                         <ul id="lstMenu">
-                            <li class="menu-item active"><a href="http://127.0.0.1:5500/vatvostudio.vn/index.html">HOME</a></li>
-                            <li class="menu-item"><a href="http://127.0.0.1:5500/vatvostudio.vn/register.html">ĐĂNG KÝ</a></li>
+                            <li class="menu-item active"><a href="http://127.0.0.1:5501/index.html">HOME</a></li>
+                            <li class="menu-item"><a href="http://127.0.0.1:5501/register.html">ĐĂNG KÝ</a></li>
                             <li class="menu-item"><a href="https://vatvostudio.vn/">VẬT VỜ ĐÁNH GIÁ</a></li>
                             <li class="menu-item"><a href="https://vatvostudio.vn/">GÓC NHÌN</a></li>
                             <li class="menu-item"><a href="https://vatvostudio.vn/">KÈO THƠM</a></li>
