--- a/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/index.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/index.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="library/fontawesome-free-6.2.1-web/css/all.min.css">
-    <!-- <link rel="stylesheet" href="library/fontawesome-free-6.2.1-web/css/brands.css">
-    <link rel="stylesheet" href="library/fontawesome-free-6.2.1-web/css/solid.css"> -->
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    
     <title>Home</title>
 </head>
 
@@ -36,8 +32,8 @@
                 <div class="menu">
                     <div class="menu-left">
                         <ul id="lstMenu">
-                            <li class="menu-item active"><a href="http://127.0.0.1:5500/vatvostudio.vn/index.html">HOME</a></li>
-                            <li class="menu-item"><a href="http://127.0.0.1:5500/vatvostudio.vn/register.html">ĐĂNG KÝ</a></li>
+                            <li class="menu-item active"><a href="http://127.0.0.1:5501/index.html">HOME</a></li>
+                            <li class="menu-item"><a href="http://127.0.0.1:5501/register.html">ĐĂNG KÝ</a></li>
                             <li class="menu-item"><a href="https://vatvostudio.vn/">VẬT VỜ ĐÁNH GIÁ</a></li>
                             <li class="menu-item"><a href="https://vatvostudio.vn/">GÓC NHÌN</a></li>
                             <li class="menu-item"><a href="https://vatvostudio.vn/">KÈO THƠM</a></li>
@@ -55,11 +51,11 @@
             <div class="container">
                 <div class="main-news">
                     <div class="new-left">
-                        <a href="http://127.0.0.1:5500/vatvostudio.vn/detail.html">
+                        <a href="http://127.0.0.1:5501/detail.html">
                             <img src="images/banner_miui.jpg" alt="nothing" />
                         </a>
                         <div class="main-title">
-                            <h1><a href="http://127.0.0.1:5500/vatvostudio.vn/detail.html">MIUI 14 ra mắt: Cải thiện 60% hiệu suất, giảm 23% dung lượng hệ thống</a></h1>
+                            <h1><a href="http://127.0.0.1:5501/detail.html">MIUI 14 ra mắt: Cải thiện 60% hiệu suất, giảm 23% dung lượng hệ thống</a></h1>
                         </div>
                         <div class="main-overlay">TIN TỨC</div>
                     </div>
