Project angular crud

--- a/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/register.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/register.html
@@ -151,6 +151,12 @@
                 </div>
             </div>
         </div>
+
+        <div id="notice">
+            <div class="notice-content">
+                <p>Đăng ký thành công</p>
+            </div>
+        </div>
         <script src="script.js"></script>
     </body>
 
