--- a/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/index.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/index.html
@@ -245,7 +245,7 @@
                         </ul>
                 </div>
         </div>
-        <div id="overlay"></div>
+        <!-- <div id="overlay"></div> -->
         <script src="script.js"></script>
 </body>
 </html>
